testprojectfeb13/force-app/main/default/objects/PW_Contact__c/PW_Contact__c.object-meta.xml
<CustomObject>
    <description>Custom test object for PingWind contacts</description>
    <label>PW Contact</label>
    <nameField>
        <label>PW Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PW Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>