testprojectfeb13/force-app/main/default/objects/PW_Contact__c/fields/PW_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PW_First_Name__c</fullName>
    <description>PingWind Contact First Name</description>
    <label>PW First Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>