testprojectfeb13/force-app/main/default/objects/PW_Contact__c/fields/PW_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PW_Last_Name__c</fullName>
    <description>PingWind Contact Last Name</description>
    <label>PW Last Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>