testprojectfeb13/force-app/main/default/objects/PW_Contact__c/fields/PW_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>PW_Middle_Name__c</fullName>
    <label>PW Middle Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>